# etsy-seller-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
apps/server/src/: __init__.py  callback_server.py  etsy_client.py  oauth_manager.py  server.py
apps/server/src/tools/: __init__.py
